--- a/Viaje Com Darcy/Base.lproj/LaunchScreen.storyboard
+++ b/Viaje Com Darcy/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_new" translatesAutoresizingMaskIntoConstraints="NO" id="Cnl-O9-Iqa">
+                                <rect key="frame" x="151" y="169" width="299" height="261"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Cnl-O9-Iqa" secondAttribute="height" multiplier="299:261" id="3Hu-Um-slT"/>
+                                    <constraint firstAttribute="width" constant="299" id="paI-el-qxS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Cnl-O9-Iqa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WBo-gA-jDm"/>
+                            <constraint firstItem="Cnl-O9-Iqa" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ocE-SD-IkF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +38,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo_new" width="710" height="1064"/>
+    </resources>
 </document>
