--- a/Viaje Com Darcy/Base.lproj/Main.storyboard
+++ b/Viaje Com Darcy/Base.lproj/Main.storyboard
@@ -18,8 +18,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_new" translatesAutoresizingMaskIntoConstraints="NO" id="9YA-oA-4NR">
+                                <rect key="frame" x="210" y="40" width="180" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="da2-re-Dlj"/>
+                                    <constraint firstAttribute="height" constant="157" id="dke-Nl-pXw"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="dke-Nl-pXw"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não possui uma conta? Cadastre-se aqui" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79J-No-XXv">
+                                <rect key="frame" x="184" y="565" width="233" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzT-z5-w55" customClass="RoundedButton" customModule="Viaje_Com_Darcy" customModuleProvider="target">
-                                <rect key="frame" x="175" y="394" width="250" height="40"/>
+                                <rect key="frame" x="175" y="505" width="250" height="40"/>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dhS-K7-dHG"/>
@@ -29,36 +47,91 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="9YA-oA-4NR">
-                                <rect key="frame" x="180" y="70" width="240" height="232"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="CWZ-J3-6Zr">
+                                <rect key="frame" x="154" y="210" width="292" height="180"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="R5o-h0-YU1">
+                                        <rect key="frame" x="0.0" y="0.0" width="292" height="51"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Usuário" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="txR-58-4hQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="59" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CVx-Ju-opa">
+                                                <rect key="frame" x="0.0" y="21" width="292" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="QVF-K8-lN9"/>
+                                                    <constraint firstAttribute="width" constant="292" id="TNd-KV-Q8X"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="8Rj-CI-2V4">
+                                        <rect key="frame" x="0.0" y="70" width="292" height="51"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxZ-4D-MKe">
+                                                <rect key="frame" x="0.0" y="0.0" width="48" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7v6-hP-966">
+                                                <rect key="frame" x="0.0" y="21" width="292" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="A1p-z5-NAv"/>
+                                                    <constraint firstAttribute="width" constant="292" id="cSm-9s-z7V"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QZi-b2-MNj">
+                                        <rect key="frame" x="0.0" y="140" width="292" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Cc2-h9-EPd"/>
+                                            <constraint firstAttribute="width" constant="292" id="JkB-TK-t1a"/>
+                                        </constraints>
+                                        <state key="normal" title="Fazer login"/>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="da2-re-Dlj"/>
-                                    <constraint firstAttribute="height" constant="232" id="dke-Nl-pXw"/>
+                                    <constraint firstAttribute="height" constant="180" id="Ry6-b4-ULl"/>
                                 </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81D-NG-wjH">
-                                <rect key="frame" x="232" y="464" width="136" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="136" id="Sv2-qg-1uQ"/>
-                                    <constraint firstAttribute="height" constant="30" id="yWc-86-kJk"/>
-                                </constraints>
-                                <state key="normal" title="Criar minha conta">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="eLB-A5-lij" kind="show" id="7ve-pe-b3w"/>
-                                </connections>
-                            </button>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="81D-NG-wjH" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="DrI-AL-gTt"/>
-                            <constraint firstItem="JzT-z5-w55" firstAttribute="centerY" secondItem="FQV-zH-Fzk" secondAttribute="centerY" constant="114" id="E7R-QE-LS0"/>
-                            <constraint firstItem="9YA-oA-4NR" firstAttribute="top" secondItem="5Ga-kJ-JTW" secondAttribute="bottom" constant="50" id="Tco-Pr-BcM"/>
+                            <constraint firstItem="79J-No-XXv" firstAttribute="top" secondItem="JzT-z5-w55" secondAttribute="bottom" constant="20" id="3Ns-jc-iRk"/>
+                            <constraint firstItem="CWZ-J3-6Zr" firstAttribute="centerX" secondItem="JzT-z5-w55" secondAttribute="centerX" id="8sI-Dd-rKK"/>
+                            <constraint firstItem="JzT-z5-w55" firstAttribute="centerY" secondItem="FQV-zH-Fzk" secondAttribute="centerY" constant="260" id="E7R-QE-LS0"/>
+                            <constraint firstItem="8IS-Ze-ScE" firstAttribute="top" secondItem="JzT-z5-w55" secondAttribute="bottom" constant="20" id="JxQ-KU-Zjx"/>
+                            <constraint firstItem="9YA-oA-4NR" firstAttribute="top" secondItem="5Ga-kJ-JTW" secondAttribute="bottom" constant="20" id="KhQ-V0-xwL"/>
+                            <constraint firstItem="9YA-oA-4NR" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="Pye-xO-wIp"/>
+                            <constraint firstItem="9YA-oA-4NR" firstAttribute="top" secondItem="5Ga-kJ-JTW" secondAttribute="bottom" constant="24" id="Tco-Pr-BcM"/>
+                            <constraint firstItem="CWZ-J3-6Zr" firstAttribute="centerY" secondItem="FQV-zH-Fzk" secondAttribute="centerY" id="U4X-tq-0zA"/>
+                            <constraint firstItem="CWZ-J3-6Zr" firstAttribute="top" secondItem="9YA-oA-4NR" secondAttribute="bottom" constant="40" id="iu1-yX-jpZ"/>
+                            <constraint firstItem="JzT-z5-w55" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="j5X-sD-RuO"/>
                             <constraint firstItem="9YA-oA-4NR" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="jG5-os-cWM"/>
+                            <constraint firstItem="8IS-Ze-ScE" firstAttribute="top" secondItem="79J-No-XXv" secondAttribute="bottom" constant="20" id="sKv-ep-jJj"/>
                             <constraint firstItem="JzT-z5-w55" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="usK-48-cqo"/>
-                            <constraint firstItem="81D-NG-wjH" firstAttribute="top" secondItem="JzT-z5-w55" secondAttribute="bottom" constant="30" id="xW9-Cq-7CX"/>
+                            <constraint firstItem="79J-No-XXv" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="v7u-hr-5KX"/>
+                            <constraint firstItem="CWZ-J3-6Zr" firstAttribute="centerX" secondItem="FQV-zH-Fzk" secondAttribute="centerX" id="yr3-mz-HRJ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Tco-Pr-BcM"/>
+                                <exclude reference="jG5-os-cWM"/>
+                                <exclude reference="yr3-mz-HRJ"/>
+                                <exclude reference="E7R-QE-LS0"/>
+                                <exclude reference="usK-48-cqo"/>
+                                <exclude reference="JxQ-KU-Zjx"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cUm-ZC-icC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,7 +150,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cadastro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzY-hm-8DW">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Cadastro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzY-hm-8DW">
                                 <rect key="frame" x="20" y="72" width="143" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="143" id="MWt-tv-sZk"/>
@@ -102,6 +175,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="328" height="344"/>
+        <image name="logo_new" width="710" height="1064"/>
     </resources>
 </document>
