--- a/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
+++ b/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
@@ -230,11 +230,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UyH-jf-1mm" customClass="ChallengeCardView" customModule="Viaje_Com_Darcy" customModuleProvider="target">
                                 <rect key="frame" x="20" y="28" width="560" height="472"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SNb-D9-Kcg">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="265"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SNb-D9-Kcg">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="262"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Descrição do desafio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.55000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="JkM-o6-YJq">
-                                                <rect key="frame" x="8" y="198" width="544" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição do desafio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.55000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="JkM-o6-YJq">
+                                                <rect key="frame" x="8" y="195" width="544" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="GcK-Iq-bFb"/>
                                                 </constraints>
@@ -242,15 +242,15 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="default-challenge-image" translatesAutoresizingMaskIntoConstraints="NO" id="HTH-aq-faU">
-                                                <rect key="frame" x="247" y="50" width="67" height="79"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default-challenge-image" translatesAutoresizingMaskIntoConstraints="NO" id="HTH-aq-faU">
+                                                <rect key="frame" x="247" y="47" width="67" height="79"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="79" id="am6-uH-6SO"/>
                                                     <constraint firstAttribute="width" constant="67" id="o5f-QR-Tr9"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Título" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrS-UI-776">
-                                                <rect key="frame" x="8" y="165" width="544" height="25"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrS-UI-776">
+                                                <rect key="frame" x="8" y="162" width="544" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="HoV-4s-vzz"/>
                                                 </constraints>
