--- a/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
+++ b/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
@@ -226,6 +226,9 @@
                                         <exclude reference="LUC-ay-qeU"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <action selector="onAcceptChallengeClick:" destination="3MH-In-QkI" eventType="touchUpInside" id="aeu-Nb-RAZ"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UyH-jf-1mm" customClass="ChallengeCardView" customModule="Viaje_Com_Darcy" customModuleProvider="target">
                                 <rect key="frame" x="20" y="28" width="560" height="472"/>
