--- a/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
+++ b/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
@@ -231,13 +231,13 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UyH-jf-1mm" customClass="ChallengeCardView" customModule="Viaje_Com_Darcy" customModuleProvider="target">
-                                <rect key="frame" x="20" y="28" width="560" height="472"/>
+                                <rect key="frame" x="20" y="40" width="560" height="460"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SNb-D9-Kcg">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="262"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="256"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição do desafio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.55000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="JkM-o6-YJq">
-                                                <rect key="frame" x="8" y="195" width="544" height="21"/>
+                                                <rect key="frame" x="8" y="189" width="544" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="GcK-Iq-bFb"/>
                                                 </constraints>
@@ -246,14 +246,14 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default-challenge-image" translatesAutoresizingMaskIntoConstraints="NO" id="HTH-aq-faU">
-                                                <rect key="frame" x="247" y="47" width="67" height="79"/>
+                                                <rect key="frame" x="247" y="41" width="67" height="79"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="79" id="am6-uH-6SO"/>
                                                     <constraint firstAttribute="width" constant="67" id="o5f-QR-Tr9"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrS-UI-776">
-                                                <rect key="frame" x="8" y="162" width="544" height="25"/>
+                                                <rect key="frame" x="8" y="156" width="544" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="HoV-4s-vzz"/>
                                                 </constraints>
@@ -298,12 +298,18 @@
                             <constraint firstItem="MvZ-Lu-Zoq" firstAttribute="top" secondItem="UyH-jf-1mm" secondAttribute="bottom" constant="20" id="Kgl-cm-cJ5"/>
                             <constraint firstItem="MvZ-Lu-Zoq" firstAttribute="width" secondItem="UyH-jf-1mm" secondAttribute="width" id="RbM-0w-8N4"/>
                             <constraint firstItem="UyH-jf-1mm" firstAttribute="trailing" secondItem="az3-H7-0ao" secondAttribute="trailingMargin" id="Shv-Q9-tpp"/>
+                            <constraint firstAttribute="trailing" secondItem="UyH-jf-1mm" secondAttribute="trailing" constant="20" id="U9o-TM-cGp"/>
                             <constraint firstItem="MvZ-Lu-Zoq" firstAttribute="centerX" secondItem="az3-H7-0ao" secondAttribute="centerX" id="YXS-Ub-YTW"/>
-                            <constraint firstItem="UyH-jf-1mm" firstAttribute="leading" secondItem="az3-H7-0ao" secondAttribute="leadingMargin" id="aA1-Xi-gNb"/>
+                            <constraint firstItem="UyH-jf-1mm" firstAttribute="leading" secondItem="az3-H7-0ao" secondAttribute="leadingMargin" constant="20" id="aA1-Xi-gNb"/>
+                            <constraint firstItem="UyH-jf-1mm" firstAttribute="top" secondItem="MZa-SY-RRL" secondAttribute="bottom" constant="20" id="g9X-QC-bo3"/>
                             <constraint firstItem="Y4e-h5-8L7" firstAttribute="top" secondItem="MvZ-Lu-Zoq" secondAttribute="bottom" constant="20" id="hFV-KM-Z7B"/>
+                            <constraint firstItem="UyH-jf-1mm" firstAttribute="leading" secondItem="az3-H7-0ao" secondAttribute="leading" constant="20" id="vsx-iK-UBz"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="Ick-Qs-5xV"/>
+                                <exclude reference="Shv-Q9-tpp"/>
+                                <exclude reference="aA1-Xi-gNb"/>
                                 <exclude reference="4Fc-cp-j1n"/>
                             </mask>
                         </variation>
