--- a/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
+++ b/ios/Viaje Com Darcy/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CVx-Ju-opa">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CVx-Ju-opa" customClass="BottomBorderedTextField" customModule="Viaje_Com_Darcy" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="14" width="292" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="QVF-K8-lN9"/>
@@ -80,7 +80,7 @@
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7v6-hP-966" userLabel="Password Text Field">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7v6-hP-966" userLabel="Password Text Field" customClass="BottomBorderedTextField" customModule="Viaje_Com_Darcy" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="14" width="292" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="A1p-z5-NAv"/>
