--- a/src-ios/Viaje Com Darcy/Viaje Com Darcy/view/storyboard/SignUp.storyboard
+++ b/src-ios/Viaje Com Darcy/Viaje Com Darcy/view/storyboard/SignUp.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -153,6 +153,9 @@
                                     <constraint firstAttribute="height" constant="22" id="0gP-UG-Ngb"/>
                                 </constraints>
                                 <state key="normal" image="icone_voltar"/>
+                                <connections>
+                                    <action selector="onBack:" destination="U4d-JF-eMs" eventType="touchUpInside" id="ecS-h4-dhX"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Escolha um sexo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szz-WU-v69">
                                 <rect key="frame" x="117" y="436" width="141" height="21"/>
